# AOS-Customer-Edition

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: continue_config.json  lm_studio_mcp.py  mcp_config.json  remote_hosts.json
data/: .gitkeep
data/ingress/: .gitkeep
deploy/: bootstrap.sh
deploy/ansible/: install.yml  install_light.yml
deploy/extensions/: aos-telemetry-0.1.0.vsix
src/aos/: __init__.py  cli.py  config.py  rag_engine.py
src/aos/gateway/: __init__.py  app.py  auth.py  routes.py  triage.py
src/aos/telemetry/: __init__.py  awattar.py  energy_meter.py  evaluator.py  fitness_scorer.py  leaderboard.py  market_broker.py  model_discovery.py  recommender.py  runner.py  task_suite.py
src/aos/tools/: __init__.py  hardware_telemetry.py  vram_manager.py  watchdog.py
tests/: test_smoke.py
